--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -51,6 +51,14 @@
 	background:red;
 } 
 
+.static-item{
+	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ }
+ 
 .selected-skill{
 	margin:2px;
  	padding:5px;
@@ -72,3 +80,40 @@
  	margin-left:5px;
  }
  
+ .candidate-title{
+ 	color:#6f42c1;
+ }
+ 
+ .candidate-view-div-standard{
+ 	float:left;
+ 	margin-left:10px;
+ 	margin-top:10px;
+ 	margin-bottom:20px;
+ 	border: 1px solid black;
+ 	width:400px;
+ 	height:200px;
+ 	padding:50px;
+ }
+ 
+ .candidate-view-div{
+ 	clear:both;
+ 	margin-left:10px;
+ 	margin-bottom:20px;
+ 	border: 1px solid black;
+ 	padding:10px;
+ 	min-width:400px;
+ 	
+ }
+ 
+ .candidate-view-div-footer{
+ 	min-height:20px;
+ }
+ 
+ .table-hdr-td{
+ 	font-weight:bold;
+ }
+ 
+textarea {
+    width:50%;
+    height:200px;
+}
