--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -95,6 +95,17 @@
  	padding:50px;
  }
  
+ .open-position-view-div-standard{
+ 	float:left;
+ 	margin-left:10px;
+ 	margin-top:10px;
+ 	margin-bottom:20px;
+ 	border: 1px solid black;
+ 	width:500px;
+ 	height:200px;
+ 	padding:50px;
+ }
+ 
  .candidate-view-div{
  	clear:both;
  	margin-left:10px;
@@ -111,9 +122,14 @@
  
  .table-hdr-td{
  	font-weight:bold;
+ 	margin-right:15px;
  }
  
 textarea {
     width:50%;
     height:200px;
+}
+
+.tabNavActive{
+	color:#6f42c1;
 }
