--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -41,7 +41,7 @@
 		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-listings">Manage Job Listings</a>
         </li>
-		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
+		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-marketplace">Marketplace</a>
         </li>
 
