--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -63,12 +63,14 @@
 <!-- Pricing information -->
 <div class="segment">
 	<h1>Pricing</h1>
-						<p><b class="highlight">EUR 600</b> ex BTW per recruiter for an annual subscription</p>
+						<p><b class="highlight">EUR 120</b> ex BTW per recruiter for an annual subscription</p>
 						<p>You have the option to start a subscription after the 90 days trial period has expired if you wish to continue to access the site.</p>
 						<p>IT recruiters will have full access to the site features including</p>
 						<ul>
 							<li>Unlimited Access to the IT Candidate CV database</li>
 							<li>Unlimited Postings on the IT Job board</li>
+							<li>Access to the advanced Suggestion Search feature</li>
+							<li>Access to the B2B Marketplace</li>
 						</ul>
 </div>
 
