--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -3,7 +3,7 @@
 
 		<!-- Action buttons -->
 		<div class="action-buttons">
-			<button class="btn btn-secondary btnRight" (click)="fetchStatus()" download>Refresh</button>
+			<button class="btn btn-secondary btnRight" (click)="refreshData()" download>Refresh</button>
 		</div>
 			
 		<ul class="nav nav-tabs">
@@ -15,6 +15,9 @@
 		  </li>
 		   <li class="nav-item statsChartTab">
 		    <span class="nav-link" (click)="switchTab('listings')">Listings</span>
+		  </li>
+		  <li class="nav-item statsChartTab">
+		    <span class="nav-link" (click)="switchTab('marketplace')">Marketplace</span>
 		  </li>
 		  <li class="nav-item statsChartTab">
 		    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
@@ -115,6 +118,38 @@
      						[chartType]="listingChartType" 
      						[plugins]="listingChartPlugins">
   					</canvas>
+			</div>			
+		</div>
+		
+		<!-- Marketplace Views -->
+		<div *ngIf="showMarketplaceStats">		
+			<div class="chart-wrapper">
+				<h3>Offered Candidate Views: {{offeredCandidateViewsTotal}}</h3>
+				<button (click)="switchMarketplaceOfferedCandidatesChartData('week')">This week</button>
+				<button (click)="switchMarketplaceOfferedCandidatesChartData('day')">Today</button>
+    			<canvas baseChart 
+        				[datasets]="marketPlaceEventsChartDataOffered" 
+        				[labels]="marketPlaceEventsChartLabelsOffered" 
+        				[options]="marketPlaceEventsChartOptions"
+        				[colors]="marketPlaceEventsChartColors" 
+        				[legend]="marketPlaceEventsChartLegend" 
+        				[chartType]="marketPlaceEventsChartType" 
+        				[plugins]="marketPlaceEventsChartPlugins">
+    			</canvas>
+    		</div>	
+			<div class="chart-wrapper">			
+				<h3>Requested Candidate Views: {{requestedCandidateViewsTotal}}</h3>
+				<button (click)="switchMarketplaceRequestedCandidatesChartData('week')">This week</button>
+				<button (click)="switchMarketplaceRequestedCandidatesChartData('day')">Today</button>
+    			<canvas baseChart 
+        				[datasets]="marketPlaceEventsChartDataRequested" 
+        				[labels]="marketPlaceEventsChartLabelsRequested" 
+        				[options]="marketPlaceEventsChartOptions"
+        				[colors]="marketPlaceEventsChartColors" 
+        				[legend]="marketPlaceEventsChartLegend" 
+        				[chartType]="marketPlaceEventsChartType" 
+        				[plugins]="marketPlaceEventsChartPlugins">
+    			</canvas>
 			</div>			
 		</div>
 			
